--- a/CHSZiK/src/app/main/pages/warehouse/components/modal/modal-creating-item-in-warehouse.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/components/modal/modal-creating-item-in-warehouse.component.scss
@@ -13,7 +13,7 @@
   .content {
     background-color: white;
     width: 500px;
-    height: 280px;
+    height: 460px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -32,11 +32,9 @@
       margin-left: 5px;
       border-radius: 5px;
 
-      mat-icon {
-        margin: 0 auto;
-        font-size: 24px;
-        width: auto;
-        height: auto;
+      img {
+        width: 20px;
+        height: 20px;
       }
     }
 
