--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
@@ -3,6 +3,16 @@
   margin: 0;
 }
 
+.loading {
+  top: 150px;
+  margin: 0 auto;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background-color: transparent;
+}
+
 .wrapper {
   padding-top: 15px;
   width: 1440px;
@@ -33,7 +43,50 @@
     }
 
     .header {
+      display: flex;
       margin: 0 auto;
+      align-items: center;
+
+      .header__btn-save {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 5px;
+        width: 45px;
+        height: 45px;
+        border-radius: 50px;
+
+        img {
+          width: 45px;
+          height: 45px;
+        }
+      }
+
+
+      .example-full-width {
+        width: 455px;
+        height: 45px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+      }
+
+      .border {
+        margin-left: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5px;
+        box-shadow: 0 0 5px 3px rgba(221, 221, 221, 1);
+        background-color: #f5f5f5;
+        cursor: pointer;
+        width: 45px;
+        height: 45px;
+
+        img {
+          width: 45px;
+          height: 45px;
+        }
+      }
 
       .header__name {
         padding: 5px;
@@ -196,6 +249,13 @@
         box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
         font-size: 16px;
         height: 30px;
+      }
+
+      .item__element-quantity {
+        width: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
       }
 
       .button {
