--- a/CHSZiK/src/app/main/pages/warehouse/layout/warehouse.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/layout/warehouse.component.scss
@@ -3,6 +3,16 @@
   margin: 0;
 }
 
+.loading {
+  top: 150px;
+  margin: 0 auto;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background-color: transparent;
+}
+
 .wrapper {
   padding-top: 15px;
   width: 1440px;
@@ -58,6 +68,8 @@
     background: rgba(164, 147, 67, 0.5);
     border-radius: 5px;
     margin-bottom: 15px;
+    max-height: 800px;
+    overflow: auto;
 
     .item-list {
       box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, .5);
@@ -66,50 +78,60 @@
       width: 1400px;
       background-color: white;
       display: flex;
-      justify-content: space-around;
+      //justify-content: space-around;
+      justify-content: center;
       align-items: center;
-      padding-top: 5px;
-      padding-bottom: 5px;
-      height: 50px;
+      //height: 50px;
       margin-top: 10px;
 
+      .item-list__line {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        justify-content: space-around;
+        align-items: center;
+        //height: 50px;
+        width: 1358px;
+        display: flex;
+
+        .item {
+          padding: 5px;
+          border-radius: 5px;
+          box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+          background-color: #f5f5f5;
+          font-size: 16px;
+        }
+
+        .item__name {
+          width: 400px;
+        }
+
+        .item__article {
+          width: 200px;
+        }
+
+        .item__price {
+          width: 115px;
+        }
+
+        .item__manufacturer {
+          width: 400px;
+        }
+
+        .item-quantity {
+          width: 100px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
+      }
+
       .item-list__img-delete {
-        margin-left: 12px;
         cursor: pointer;
         width: 30px;
         height: 30px;
       }
 
-      .item {
-        padding: 5px;
-        border-radius: 5px;
-        box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
-        background-color: #f5f5f5;
-        font-size: 16px;
-      }
 
-      .item__name {
-        width: 400px;
-      }
-
-      .item__article {
-        width: 200px;
-      }
-
-      .item__price {
-        width: 115px;
-      }
-
-      .item__manufacturer {
-        width: 400px;
-      }
-
-      .item-quantity {
-        width: 100px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
     }
   }
 }
