--- a/CHSZiK/src/app/main/pages/warehouse/components/modal/modal-creating-item-in-warehouse.component.html
+++ b/CHSZiK/src/app/main/pages/warehouse/components/modal/modal-creating-item-in-warehouse.component.html
@@ -15,10 +15,19 @@
         <mat-label>Артикул</mat-label>
         <input type="text" formControlName="article" matInput placeholder="Введите артикул">
       </mat-form-field>
-<!--      <mat-form-field class="example-full-width mt15px">-->
-<!--        <mat-label>Группа</mat-label>-->
-<!--        <input type="text" formControlName="group" matInput placeholder="Введите группу">-->
-<!--      </mat-form-field>-->
+      <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <mat-label>Группа</mat-label>
+          <input type="text" required matInput [formControl]="myControl" placeholder="Введите группу" [matAutocomplete]="auto">
+          <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+              {{option.group}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </form>
+
+
       <p>
         <mat-checkbox [formControl]="disableSelect">Единица измерения</mat-checkbox>
       </p>
