--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
@@ -25,6 +25,22 @@
     justify-content: center;
     align-items: center;
 
+    .head__quantity {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      .head__quantity-item {
+        padding: 5px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+        background-color: #f5f5f5;
+        font-size: 32px;
+      }
+    }
+
+
+
     .btn-back {
       width: 133px;
       height: 55px;
@@ -158,9 +174,14 @@
         box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
       }
 
+      .mr5px {
+        margin-right: 5px;
+      }
+
       .setting__settings-price {
         display: flex;
         align-items: center;
+
       }
 
       .setting__settings-manufacturer {
